--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,4 +27,5 @@ repositories{
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.google.code.gson:gson:2.2.4'
+    compile 'com.squareup.picasso:picasso:2.3.4'
 }
